Integration of the sniffer agent inside the Boot class (only the centralized version). Tested with the alt_bit example.

--- a/TraceExpressionsRVMAS/.classpath
+++ b/TraceExpressionsRVMAS/.classpath
@@ -32,5 +32,6 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="/Users/angeloferrando/Documents/workspace/distributionInJADE/configurations/alt_bit_4/alt_bit.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
