--- a/TraceExpressionsRVMAS/pom.xml
+++ b/TraceExpressionsRVMAS/pom.xml
@@ -32,4 +32,18 @@
 		<url>http://jade.tilab.com/maven/</url>
 	</repository>
   </repositories>
+   <build>
+	<plugins>
+	    <plugin>
+	        <groupId>org.apache.maven.plugins</groupId>
+	        <artifactId>maven-release-plugin</artifactId>
+	        <version>2.0-beta-9</version>
+        </plugin>
+    </plugins>
+  </build>
+  <scm>
+	<connection>scm:git:git@github.com:AngeloFerrando/TraceExpressionsRVMAS.git</connection>
+	<url>scm:git:git@github.com:AngeloFerrando/TraceExpressionsRVMAS.git</url>
+	<developerConnection>scm:git:git@github.com:AngeloFerrando/TraceExpressionsRVMAS.git</developerConnection>
+  </scm>
 </project>
