--- a/TraceExpressionsRVMAS/pom.xml
+++ b/TraceExpressionsRVMAS/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>it.unige.dibris</groupId>
   <artifactId>TraceExpressionsRVMAS</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
+  <version>1</version>
   <dependencies>
 		<dependency>
 		    <groupId>com.tilab.jade</groupId>
@@ -32,7 +32,7 @@
 		<url>http://jade.tilab.com/maven/</url>
 	</repository>
   </repositories>
-   <build>
+     <build>
 	<plugins>
 	    <plugin>
 	        <groupId>org.apache.maven.plugins</groupId>
@@ -40,7 +40,7 @@
 	        <version>2.0-beta-9</version>
         </plugin>
     </plugins>
-  </build>
+  </build> 
   <scm>
 	<connection>scm:git:git@github.com:AngeloFerrando/TraceExpressionsRVMAS.git</connection>
 	<url>scm:git:git@github.com:AngeloFerrando/TraceExpressionsRVMAS.git</url>
