--- a/TraceExpressionsRVMAS/pom.xml
+++ b/TraceExpressionsRVMAS/pom.xml
@@ -32,6 +32,10 @@
 		<url>http://jade.tilab.com/maven/</url>
 	</repository>
   </repositories>
+  <properties>
+    <maven.compiler.source>1.8</maven.compiler.source>
+    <maven.compiler.target>1.8</maven.compiler.target>
+  </properties>
   <distributionManagement>
     <repository>
         <id>repo</id>
